css/cart.css
#popup{width:854px; border:1px solid #000; background:#fff; padding:0 20px; display:none; position:absolute;z-index:999;}
.cart {width:854px;}
.close_box{float:left; width:100%;}
.close_box .close{float:right; width:42px; background:url(../images/close_img.jpg) no-repeat right center; font:8px/14px arial; color:#9b9b9b;}
.heading{float:left; width:100%;border-bottom:3px solid #000;padding-bottom: 7px;padding-top: 5px;}
.heading ul{float:left; width:100%;}
.heading ul li{float:left; text-align:center; font:16px/16px 'NeutraDisplayThinMedium'; color:#000; background:none; list-style-type:none;}
.main_heading{float:left; width:100%; background:#000; margin-top:2px;}
.main_heading h3{font:16px/23px 'NeutraDisplayThinMedium'; color:#fff; float:left; width:500px; padding-left:8px;}
.main_heading .customer_service{font:10px/23px Georgia, "Times New Roman", Times, serif; color:#fff; float:right; width:auto; padding-right:5px;}
.main_heading .sub_total{float:right;font:17px/23px 'NeutraDisplayAltBold'; color:#fff; padding-right:5px;}

.items{float:left; width:100%;}
.items ul{float:left; width:100%; border-bottom:1px solid #000;}
.items ul.bordnone{border-bottom:none;}
.items ul li{float:left; height:90px; padding-top:30px; text-align:center; list-style-type:none; background:none;font:12px Georgia, "Times New Roman", Times, serif; color:#000;}
.items ul li a{ float:left;font:10px/15px Georgia, "Times New Roman", Times, serif; text-transform:uppercase;}
.items ul li a.remove{color:#c0c0c0; width:60px; background:url(../images/remove_img.jpg) no-repeat left center; text-indent:15px; margin:0px;}
.items ul li a.return_policy{color:#000; width:90px;}
.items ul li.remove_li{width:90px;}

.items ul li.item-image {padding-top:0;}
li.item-image, li.item-header-image {width:100px;}
li.item-designer, li.item-header-designer {width:78px;}
li.item-name, li.item-header-name {width:183px;}
li.item-color, li.item-header-color {width:70px;}
li.item-size, li.item-header-size {width:92px;}
li.item-price, li.item-header-price {width:88px;}
li.item-qty, li.item-header-qty {width:51px;}
li.item-subtotal, li.item-header-subtotal {width:89px;}

.row{float:left; width:100%; padding-bottom:20px;}
.row .right-actions{float:right; /*width:255px;*/ margin-top:14px;}
.row .right-actions li{float:left; list-style-type:none; background:none; padding:0;}
.row .right-actions .continue_link{ cursor:pointer; float:left; width:153px;  border:1px solid #000; text-align:center; font:14px/17px 'NeutraDisplayAltBold'; color:#000;background:#fff;}
.row .right-actions .checkout_link{ cursor:pointer; float:left; width:83px; border:none; text-align:center; font:14px/19px 'NeutraDisplayAltBold'; color:#fff; background:#0845ab; margin-left:15px;}

.row .left-actions{float:left; /*width:255px;*/ margin-top:14px;}
.row .left-actions li{float:left; list-style-type:none; background:none; padding:0;}
.row .left-actions li input.coupon_input{display:none;float:left; width:88px; height:19px; border:1px solid #737373; margin-right:7px; font:10px/17px Georgia, "Times New Roman", Times, serif; color:#818181; text-indent:5px;}
.row .left-actions li .clear_link{cursor:pointer;float:left;background:#000;border:none;font:14px/19px 'NeutraDisplayAltBold';color:#fff;}


.fade {
  opacity: 0;
-webkit-transition: opacity 0.15s linear;
-moz-transition: opacity 0.15s linear;
-ms-transition: opacity 0.15s linear;
-o-transition: opacity 0.15s linear;
transition: opacity 0.15s linear;
}
.fade.in {
  opacity:1;
}

